no idea anymore

--- a/no/index.html
+++ b/no/index.html
@@ -25,15 +25,70 @@
     100% { background-color: #fff; }
   }
   body {
-  -webkit-animation: argh-my-eyes 200ms infinite;
-  -moz-animation:    argh-my-eyes 200ms infinite;
-  animation:         argh-my-eyes 200ms infinite;
-}
+  font-family: 'Arial', sans-serif; 
+  -webkit-animation: argh-my-eyes 50ms infinite;
+  -moz-animation:    argh-my-eyes 50ms infinite;
+  animation:         argh-my-eyes 50ms infinite;
+  }
+  h1 {
+    text-align: center;
+    margin-top: 20%;
+    font-size: 5em;
+    color: red;
+  }
 </style>
+<!-- font to arial-->
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 </head>
 <body>
 
-<h1><b> YOU DID THIS TO ME </b></h1>
+<h1><b>YOU DID THIS TO ME</b></h1>
+<h1>VEhJUyBJUyBBTEwgWU9VUiBGQVVMVA==</h1>
+<h1><b><i>TE9PSyBJTiBUSEUgU09VUkNF</i></b></h1>
+<h1><b><i>Rm9sbG93IHRoZSByYWJiaXQgaG9sZQ==</i></b></h1>
+<script>
+    // maybe someone will decode my message above. someday...
+  document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+  }, false);
 
+//why do i feel schizophrenic
+//also why did i write this at 2 am
+//i will regret this in the morning wont i?
+
+  var originalTitle = document.title;
+    setInterval(function() {
+        document.title = Math.random().toString(36).substring(2, 15);
+        setTimeout(function() {
+        document.title = originalTitle;
+        }, 25);
+    }, 50);
+
+    // automatically force copy a text when the user interacts with the page
+    document.addEventListener('copy', function(e) {
+        e.clipboardData.setData('text/plain', 'VEhJUyBJUyBBTEwgWU9VUiBGQVVMVA==');
+        e.preventDefault();
+    });
+
+
+// god why have i been so fucking depressed lately what is wrong with me.
+
+// i want to S2lsbA== myself but i dont have the guts to do it
+// maybe this will pass someday
+// or maybe i will just do it one day
+// who knows
+// i just want to be happy
+// is that too much to ask for?
+// i miss when things were simple
+// so yeah.
+// also if you are reading this, hi, sorry you have to read this ranty shit.
+// ...
+// why ARE you reading this?
+// i hope he doesnt get too scared
+
+</script>
 </body>
 </html>
